Tweaked methods to get rid of deprecated methods being used